--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "vs-flor",
-    "displayName": "Flor",
-    "description": "Flor Syntax",
+    "displayName": "Linguagem Flor: Sintaxe",
+    "description": "Extensão do VSCode para a linguagem brasileira Flor",
     "version": "0.0.1",
     "publisher": "mariomatheu",
     "icon": "res/icon.png",
@@ -11,6 +11,10 @@
     "categories": [
         "Programming Languages"
     ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/flor-lang/vs-flor"
+    },
     "contributes": {
         "languages": [{
             "id": "flor",
